--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,7 +18,7 @@
 <% content_for :sidebar do %>
   <div class="content-well p-x-2 p-y-2">
     <span><%= @settings.fetch('sidebar.cta_helper') %></span>
-    <%= link_to 'New Post', new_post_path, class: "btn btn-block btn-large btn-info" %>
+    <%= link_to 'New Post', new_post_path, class: "btn btn-block btn-large #{@settings.fetch('sidebar.cta_btn') || 'btn-info'}" %>
   </div>
 <% end %>
 
