converting this over to auth0

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,7 @@
  *
  */
 
-@import "bootstrap-custom";
+//@import "bootstrap-custom";
 @import "utils";
 @import "progress-wizard";
 //@import "typeahead";
