--- a/app/views/devise/menu/_login_items.html.erb
+++ b/app/views/devise/menu/_login_items.html.erb
@@ -1,9 +1,9 @@
 <% if user_signed_in? %>
   <li class="nav-item">
-    <%= link_to('Logout', destroy_user_session_path, class: "nav-link", method: :delete) %>
+    <%= link_to('Logout', logout_path, class: "nav-link", method: :delete) %>
   </li>
 <% else %>
   <li class="nav-item">
-    <%= link_to('Login', new_user_session_path, class: "nav-link") %>
+    <%= link_to('Login', 'auth/auth0', method: :post, class: "nav-link") %>
   </li>
 <% end %>
