--- a/app/views/devise/menu/_registration_items.html.erb
+++ b/app/views/devise/menu/_registration_items.html.erb
@@ -1,9 +1,9 @@
 <% if user_signed_in? %>
   <li class="nav-item">
-    <%= link_to('Edit Account', edit_user_registration_path, class: "nav-link") %>
+    <%= link_to('Edit Account', 'edit_user_registration_path', class: "nav-link") %>
   </li>
 <% else %>
   <li class="nav-item">
-    <%= link_to('Register', new_user_registration_path, class: "nav-link") %>
+    <%= link_to('Register', 'auth/auth0', method: :post,class: "nav-link") %>
   </li>
 <% end %>
