--- a/app/views/shared/_login_signup_modal.html.erb
+++ b/app/views/shared/_login_signup_modal.html.erb
@@ -3,34 +3,11 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
         <h4 class="modal-title" id="myModalLabel">Signup/Login</h4>
       </div>
       <div class="modal-body">
-        <ul class="nav nav-tabs" role="tablist">
-          <li class="nav-item">
-            <a class="nav-link active" data-toggle="tab" href="#signup" role="tab">Signup</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#login" role="tab">Login</a>
-          </li>
-        </ul>
-
-        <!-- Tab panes -->
-        <div class="tab-content">
-          <div class="tab-pane active" id="signup" role="tabpanel">
-            <%= render 'devise/registrations/form' %>
-          </div>
-          <div class="tab-pane" id="login" role="tabpanel">
-            <%= render 'devise/sessions/form' %>
-          </div>
-
-        </div>
-        <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-          <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
-        <% end -%>
+        <p class="lead">You need to be logged in to create your first listing!</p>
+        <%= link_to('Login/Register', '/auth/auth0', method: :post, class: "btn btn-large btn-primary") %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
