--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,7 +1,7 @@
 <div class="content-well">
   <div class="row">
     <div class="col-xs-9">
-      <h2><%= link_to post.title, post %></h2>
+      <h2><%= link_to(post.title, posts_path(post)) %></h2>
       <h3><%= post.company_name %></h3>
       <h4><%= post.location %></h4>
     </div>
